<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location_icon"
        android:contentDescription="@string/search_item_icon_description"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchmodal_street"
            android:fontFamily="@font/sf_display_regular"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/search_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchmodal_details"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/grey_darker"/>

    </LinearLayout>

</LinearLayout>