<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/promo_view"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/promo_linear_height"
    android:gravity="center_horizontal"
    android:background="@drawable/rounded_background"
    android:backgroundTint="@color/grey"
    android:layout_margin="@dimen/promo_padding_small"
    android:padding="@dimen/promo_padding_small"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/promo_relative_size"
        android:layout_height="@dimen/promo_relative_size">

        <ImageView
            android:id="@+id/promo_view_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/promo_ph"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/promo_image_description" />

        <TextView
            android:id="@+id/promo_view_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo_view_percentage"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/sf_display_regular"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/promo_percent"
            android:textColor="@color/white"
            android:paddingStart="@dimen/promo_padding_small"
            android:paddingEnd="@dimen/promo_padding_small"
            android:paddingBottom="@dimen/promo_padding_micro"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/promo_view_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo_view_status"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/sf_display_regular"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/promo_status"
            android:textColor="@color/white"
            android:paddingStart="@dimen/promo_padding_small"
            android:paddingEnd="@dimen/promo_padding_small"
            android:paddingBottom="@dimen/promo_padding_micro"
            android:textSize="@dimen/text_small"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/promo_view_title"
        android:layout_width="@dimen/promo_relative_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/promo_padding_small"
        android:text="@string/promo_view_title_test"
        android:textSize="@dimen/text_small"
        android:fontFamily="@font/sf_display_regular"
        android:textColor="@color/black"
        android:maxLines="3"
        android:ellipsize="end"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start">

        <TextView
            android:id="@+id/promo_view_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo_view_weight"
            android:fontFamily="@font/sf_display_regular"
            android:textSize="@dimen/text_small"
            android:textColor="@color/grey_darker" />

        <TextView
            android:id="@+id/promo_view_hiddenprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo_view_price"
            android:fontFamily="@font/sf_display_regular"
            android:layout_marginStart="@dimen/promo_padding_small"
            android:textSize="@dimen/text_small"
            android:textColor="@color/grey_darker"
            android:visibility="invisible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/promo_view_selected"
        android:layout_width="match_parent"
        android:layout_height="@dimen/promo_button_size"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@drawable/rounded_background_promo"
        android:backgroundTint="@color/promo_selector"
        android:layout_marginTop="@dimen/promo_padding_medium"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/promo_view_remove"
            android:layout_width="@dimen/promo_button_size"
            android:layout_height="@dimen/promo_button_size"
            android:src="@drawable/baseline_remove_24"
            android:contentDescription="@string/promo_remove_description"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/promo_padding_small"/>

        <TextView
            android:id="@+id/promo_view_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/promo_view_amount"
            android:gravity="center"
            android:textSize="@dimen/text_medium"
            android:fontFamily="@font/sf_display_bold" />

        <ImageView
            android:id="@+id/promo_view_addmore"
            android:layout_width="@dimen/promo_button_size"
            android:layout_height="@dimen/promo_button_size"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/promo_add_description"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/promo_padding_small"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/promo_view_unselected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/promo_padding_medium"
        android:gravity="bottom"
        android:visibility="visible"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/promo_view_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promo_view_discount"
                android:textColor="@color/promo_percent"
                android:textSize="@dimen/text_small"
                android:foreground="@drawable/striketrough"
                android:fontFamily="@font/sf_display_regular" />

            <TextView
                android:id="@+id/promo_view_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promo_view_price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                android:fontFamily="@font/sf_display_medium" />

        </LinearLayout>

        <ImageView
            android:id="@+id/promo_view_add"
            android:layout_width="@dimen/promo_button_size"
            android:layout_height="@dimen/promo_button_size"
            android:src="@drawable/baseline_add_24"
            android:background="@drawable/rounded_background_promo"
            android:padding="@dimen/promo_padding_small"
            android:backgroundTint="@color/promo_selector"
            android:contentDescription="@string/promo_add_description" />

    </LinearLayout>

</LinearLayout>
