<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nav_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_button_description"
                android:src="@drawable/nav_button" />

            <LinearLayout
                android:id="@+id/address_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_display_regular"
                    android:text="@string/order_type_delivery"
                    android:textColor="@color/grey_darker"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sf_display_medium"
                        android:text="@string/order_address_ph"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:contentDescription="@string/address_selector_description"
                        android:src="@drawable/arrow_down" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext_background"
                android:drawableEnd="@drawable/search_button"
                android:drawablePadding="8dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/edittext_search_goods_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="@color/grey_darker"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/fav_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/fav_button_description"
                android:src="@drawable/fav_button" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:scrollbars="none"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/banners_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/promo_section_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_display_regular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_background_promo"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:backgroundTint="@color/grey"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/promo_section_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_section_button"
                    android:fontFamily="@font/sf_display_regular"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/promo_section_icon"
                    android:layout_marginStart="4dp"
                    android:translationY="1dp"
                    android:contentDescription="@string/promo_section_icon"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/promo_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catalog_section_title"
            android:textColor="@color/black"
            android:fontFamily="@font/sf_display_regular"
            android:textSize="24sp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catalog_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>